fix: gap between tags and heading1 is too narrow (fix #112)

--- a/styles/mobile.styl
+++ b/styles/mobile.styl
@@ -4,9 +4,7 @@
 // @media (max-width: $MQNarrow)
 
 // wide mobile
-@media (max-width: $MQMobile)
-  {$contentClass}:not(.custom) > h1:first-child
-    padding-top 2rem
+// @media (max-width: $MQMobile)
 
 // narrow mobile
 @media (max-width: $MQMobileNarrow)
